# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bandit.yaml  pyproject.toml
.github/actions/notify-slack-deploy/: action.yaml
.github/scripts/: get_new_version.py  update_ssm_parameter_store.py
.github/workflows/: lint.yaml  release-lambda.yaml  release-server.yaml  release.yaml  test.yaml
app/: conftest.py  manage.py  zappa_settings.py
app/admin_api/: apps.py  urls.py
app/admin_api/dashboard/: params.py  registry.py
app/admin_api/filtersets/: cms.py  document.py  file.py  modification_audit.py  notification.py  socialaccount.py  user.py
app/admin_api/serializers/: cms.py  dashboard.py  document.py  file.py  mcp_token.py  modification_audit.py  notification.py  socialaccount.py  user.py
app/admin_api/services/: socialaccount.py
app/admin_api/test/: cms_test.py  conftest.py  error_slack_notification_test.py  helpers.py  notification_test.py  socialaccount_test.py
app/admin_api/views/: cms.py  dashboard.py  document.py  file.py  mcp_token.py  modification_audit.py  notification.py  socialaccount.py  user.py
app/cms/: admin.py  admin_mixins.py  apps.py  models.py  serializers.py  translation.py  urls.py  views.py
app/cms/migrations/: 0001_initial.py  0002_historicalpage_historicalsection_historicalsitemap.py  0003_alter_historicalsitemap_order_alter_sitemap_order.py  0004_alter_section_options_alter_sitemap_options_and_more.py  0005_historicalsitemap_route_code_sitemap_route_code.py  0006_alter_sitemap_parent_sitemap.py  0007_historicalpage_show_bottom_sponsor_banner_and_more.py  0008_historicalsitemap_hide_sitemap_hide.py  0009_historicalsitemap_external_link_and_more.py  0010_remove_historicalsitemap_is_frontend_page_and_more.py  0011_remove_sitemap_uq__sitemap__parent_route_code_and_more.py  0012_alter_historicalsection_body_and_more.py  0013_domain_group_and_sitemap_link.py
app/cms/page/: apps.py  models.py  translation.py
app/cms/sitemap/: apps.py
app/cms/test/: conftest.py  domain_group_validation_test.py  page_api_test.py  site_route_calculation_test.py  sitemap_api_test.py
app/core/: __init__.py  admin.py  email_backends.py  fields.py  gunicorn_conf.py  health_check.py  models.py  observability.py  pagination.py  scancode_mixin.py  settings.py  urls.py  validators.py
app/core/authn/: allauth_adapter.py  api_key.py  jwt_authn.py  mcp_jwt.py
app/core/authz/: api_key.py
app/core/const/: account.py  datetime.py  google_api.py  regex.py  serializer.py  shop_error_messages.py  system.py  tag.py
app/core/external_apis/: __interface__.py  nhn_cloud_kakao_alimtalk.py  nhn_cloud_sms.py  smtp_email.py
app/core/filter/: multi_field.py
app/core/middleware/: append_session_token_for_local_callback.py  force_session_save_on_session_check.py  request_response_logger.py  thread_middleware.py  type.py
app/core/openapi/: filter_extension.py  schemas.py  ui_hints.py
app/core/permissions/: __init__.py  api_key.py
app/core/serializer/: base_abstract_serializer.py  date_range_serializer.py  json_schema_serializer.py  lowercased_email_field.py  nested_model_serializer.py  read_only_serializer.py  skip_none_list_serializer.py
app/core/templatetags/: data_uri.py
app/core/test/: django_helper_test.py  email_backends_test.py  models_test.py  nhn_cloud_kakao_alimtalk_test.py  nhn_cloud_sms_test.py  timespan_test.py
app/core/util/: dateutil.py  decorator.py  django_orm.py  drf_serializer.py  google_api.py  grouper.py  strutil.py  testutil.py  thread_local.py  timespan.py  totp.py
app/core/viewset/: json_schema_viewset.py  selectables_viewset.py
app/document/: apps.py  issuable.py  models.py  urls.py  views.py
app/document/migrations/: 0001_initial.py
app/document/templates/: document_verify.html  document_verify_base.html  document_verify_error.html
app/document/test/: conftest.py  download_api_test.py  dto_gating_test.py  helpers.py  services_test.py  verify_api_test.py  verify_token_test.py
app/event/: apps.py  filters.py  models.py  serializers.py  translation.py  urls.py  views.py
app/event/migrations/: 0001_initial.py  0002_alter_event_options_alter_event_name_and_more.py  0003_alter_event_name_alter_event_name_en_and_more.py  0004_remove_event_uq__evt__name_name_ko_and_more.py  0005_event_stats_end_date_event_stats_start_date_and_more.py  0006_event_logo_historicalevent_logo.py
app/event/presentation/: apps.py  filters.py  models.py  serializers.py  translation.py  urls.py  views.py
app/event/sponsor/: apps.py  filters.py  models.py  serializers.py  translation.py  urls.py  views.py
app/event/test/: api_test.py
app/external_api/: apps.py  urls.py
app/external_api/google_oauth2/: apps.py  models.py  urls.py  views.py
app/file/: admin.py  apps.py  models.py  translations.py
app/file/migrations/: 0001_initial.py
app/internal_api/: filters.py  serializers.py  urls.py  views.py
app/notification/: channels.py  tasks.py
app/notification/migrations/: 0001_initial.py  0002_emailnotificationhistorysentto_failure_reason_and_more.py  0003_emailnotificationtemplate_editor_source_and_more.py  0003_seed_payment_completed_email_template.py  0004_seed_payment_completed_email_template.py
app/notification/models/: __init__.py  base.py  email.py  nhn_cloud_kakao_alimtalk.py  nhn_cloud_sms.py
app/notification/templates/: email_preview.html  nhn_cloud_kakao_alimtalk_preview.html  nhn_cloud_sms_preview.html  payment_completed.html
app/notification/test/: history_send_test.py  kakao_sync_test.py  sms_test.py  tasks_test.py  template_test.py
app/participant_portal_api/: apps.py  models.py  urls.py
app/participant_portal_api/migrations/: 0001_initial.py  (+1 more)
app/shop/: conftest.py  patron.py
app/user/: apps.py  models.py  translation.py
docs/: migration_payment.md
envfile/: .env.docker  .env.local
infra/: Dockerfile  docker-compose.dev.yaml  server.Dockerfile
mcp_app/: __main__.py  auth.py  config.py  mdx_components.py  mdx_preview.py  routes.py  server.py  util.py
scripts/: dev-worktree.sh
(+219 files in other folders)
