[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "argon2-cffi>=25.1.0",
    "boto3 (>=1.37.37,<2.0.0)",
    "celery[redis]>=5.5.0",
    "cryptography>=43.0.0",
    "django>=6.0.4",
    "django-allauth[openid,socialaccount]>=65.0.0",
    "django-constance>=4.3.5",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-modeltranslation>=0.20.2",
    "django-picklefield>=3.4.0",
    "django-simple-history>=3.11.0",
    "django-storages[s3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "drf-standardized-errors[openapi]>=0.15.0",
    "faker>=40.13.0",
    "gunicorn>=25.3.0",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "model-bakery>=1.23.4",
    "packaging>=26.0",
    "pandas[excel, performance]>=2.2.3",
    "psycopg[binary]>=3.3.3",
    "py-openapi-schema-to-json-schema>=0.0.3",
    "sentry-sdk[django]>=2.57.0",
    "setuptools>=82.0.1",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential,s3]>=1.42.86",
    "django-stubs[compatible-mypy]>=6.0.2",
    "djangorestframework-stubs[compatible-mypy]>=3.16.9",
    "freezegun>=1.5.0",
    "ipython>=9.12.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.12.0",
    "pytest-socket>=0.7.0",
]
deployment = [
    "packaging>=26.0",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "deployment",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-django = "^4.11.1"
pytest-socket = "^0.7.0"
faker = "^37.3.0"
model-bakery = "^1.20.4"

[tool.isort]
profile = "black"
line_length = 120
known_third_party = [
    "rest_framework",
]

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "ALL",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
norecursedirs = ".git migrations static template"
python_files = "*_test.py"
addopts = "--reuse-db --disable-socket -v"

[tool.coverage.run]
source = ["."]
branch = false
omit = [
    "*/migrations/*",
    "*/test/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/admin.py",
    "manage.py",
    "core/settings.py",
    "core/wsgi.py",
    "core/asgi.py",
    "core/celery.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
